@@ -24,6 +24,7 @@ Contributors:
 	Rene Liebscher <r.liebscher@gmx.de>
 	Jim Paris <jim@jtan.com>
 	Jan Egil Ruud <janegil.ruud@microchip.com>
+	David Mosberger-Tang
 
 For minor contributions, please see the ChangeLog files.
 
