@@ -13,6 +13,7 @@ Current:
     - use libhidapi as (optional) transport for CMSIS-DAP compliant
       debuggers (JTAGICE3 with firmware 3+, AtmelICE, EDBG, mEDBG)
     - UPDI support added (AVR8X family)
+    - TPI support for USBtinyISP
 
   * New devices supported:
 
@@ -51,6 +52,7 @@ Current:
     patch #9530: Update URL to Ladyada's USBtinyISP page.
     patch #9317: Support atmega64m1 as part
     patch #9222: Enable silent build
+    patch #8924: Enable TPI for usbtiny
 
   * Internals:
     - New avrdude.conf keyword "family_id", used to verify SIB attributes
